--- a/style.css
+++ b/style.css
@@ -4,8 +4,15 @@
     text-decoration: none;
 }
 
-body {
+#body_main {
     background-image: url("data/bg3.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#body_about {
+    background-image: url("data/bg41.png");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -64,6 +71,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     margin-left: 15vw;
+    text-shadow: 1px 1px 2px black, 0 0 5px black;
 }
 
 img {
