--- a/style.css
+++ b/style.css
@@ -77,6 +77,26 @@ body {
     color: red
 }
 
+#nav-toggle {
+	position: absolute;
+	top: -100px;
+}
+nav .nav-icon {
+	display: none;
+	position: absolute;
+	right: 5%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+nav .nav-icon .line {
+	width: 30px;
+	height: 5px;
+	background-color: #fff;
+	margin: 5px;
+	border-radius: 3px;
+	transition: all .3s ease-in-out;
+}
+
 #logodiv {
     float: left;
     margin: auto 0;
@@ -201,7 +221,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    overflow: auto;
+    overflow: hidden;
     height: 100%;
     width: 10vw;
 }
@@ -458,4 +478,36 @@ input[type=submit]:hover {
     color: #000000;
     font-family: 'Ubuntu', Arial;
     margin: 20px;
+}
+
+@media screen and (max-width: 800px) {
+    #det1_about {
+        flex-direction: column;
+        height: auto;
+        padding: 50px 0px;
+    }
+    #about1 {
+        width: 90vw;
+        text-align: center;
+    }
+    .name {
+        text-align: center;
+        font-size: 50px;
+        margin: 30px 0px;
+    }
+    .about_i {
+        margin: 0px;
+        font-size: 15px;
+    }
+    #det2_about {
+        height: 200px;
+    }
+    .skills_head {
+        font-size: 50px;
+        padding: 20px 25px;
+    }
+
+    .quote {
+        font-size: 30px;
+    }
 }
