--- a/style.css
+++ b/style.css
@@ -5,20 +5,20 @@
 }
 
 #body_main {
-    background-image: url("data/bg/bg1.jpg");
+    background-image: url("data/bg/bg1.1.jpg");
 }
 
 #body_about {
-    background-image: url("data/bg/bg3.jpg");
+    background-image: url("data/bg/bg3.1.jpg");
     /* background: #252525; */
 }
 
 #body_contact {
-    background-image: url("data/bg47.jpg");
+    background-image: url("data/bg/bg6.jpg");
 }
 
 #body_art {
-    background-image: url("data/bg/bg5.jpg");
+    background-image: url("data/bg/bg5.1.jpg");
     /* background: #213f64; */
 }
 
@@ -150,6 +150,7 @@ nav .nav-icon .line {
     align-items: center;
     justify-content: center;
     flex-direction: row-reverse;
+    /* backdrop-filter: blur(5px); */
 }
 
 #det1_art {
@@ -480,6 +481,60 @@ input[type=submit]:hover {
     margin: 20px;
 }
 
+#pfp_links {
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    margin: 30px 0px;
+}
+
+.link_cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    text-align: center;
+}
+
+.link_box {
+    background-color: #ffffffbd;
+    border-radius: 15px;
+    height: 90px;
+    width: 400px;
+    padding: 0px 2vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.link_box:hover {
+    background-color: #ffffff;
+}
+
+.link_in {
+    margin: 10px;
+}
+
+.about_links {
+    font-family: 'Spartan', Arial;
+    color: white;
+    font-size: 20px;
+    word-spacing: 2px;
+    text-align: center;
+    margin: 25px 0px 5px 0px;
+}
+
+.fab {
+    color: #123133;
+}
+
+.link_txt {
+    color: #123133;
+    font-family: 'Ubuntu', Arial;
+    margin: 30px;
+}
+
 @media screen and (max-width: 800px) {
     #det1_about {
         flex-direction: column;
@@ -563,8 +618,20 @@ input[type=submit]:hover {
         width: 85vw;
         margin: 5vw;
     }
+    
+    .about_links {
+        font-size: 16px;
+    }
 }
 
-/* @media screen and (max-width: ) {
-    
-} */
+@media screen and (max-width: 500px) {
+    .link_box {
+        width: 85vw;
+        padding: 0 1.1rem;
+    }
+
+    #pfp_links {
+        height: 150px;
+        width: auto;
+    }
+}
